Removed Identity Completely

--- a/crowsoftmvc/appsettings.json
+++ b/crowsoftmvc/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=172.28.25.133;port=3306;database=crowsoftdb;uid=dbadmin;password=csoftsql"
+    "DefaultConnection": "server=172.28.25.133;port=3306;database=crowsoftdb;uid=dbadmin;password=csoftsql",
+    "crowsoftmvcContextConnection": "DataSource=crowsoftmvc.db"
   },
   "Logging": {
     "LogLevel": {
